--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    background-color: aqua;
 }
 
 .service_headings{
@@ -169,6 +170,7 @@ body{
 }
 
 .cards_container{
+    width: 1100px;
     display: flex;
     justify-content: space-between;
 }
